--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt
+          python3 -m pip install --upgrade pip wheel
+          pip3 install -r requirements.txt
 #      - name: Lint with flake8
 #        run: |
 #          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
