--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: accounts
     spec:
       containers:
-      - image: IMAGE_NAME_HERE  # Placeholder for the image
+      - image: IMAGE_NAME_HERE
         name: accounts
         resources: {}
         env:
